chore: [SSPROD-7700] move test in the appropriate file

--- a/charts/agent/tests/clusterrole_test.yaml
+++ b/charts/agent/tests/clusterrole_test.yaml
@@ -69,3 +69,16 @@ tests:
               - RELEASE-NAME-agent
             verbs:
               - "use"
+
+  - it: Test Events can be created in kubernetes
+    asserts:
+      - contains:
+          path: rules
+          content:
+            apiGroups:
+              - ""
+            resources:
+              - "events"
+            verbs:
+              - "create"
+              - "patch"
