feat: add support for new agent readiness probe
this change adds support for that new readiness probe
while also supporting customers who are still deploying older
agent versions.

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -219,9 +219,16 @@ spec:
               value: /opt/draios/etc/ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
             {{- end }}
           readinessProbe:
+            {{- if ge (semver "12.18.0" | (semver .Values.image.tag).Compare) 0 }}
+            httpGet:
+              path: /healthz
+              port: 24483
+            {{- else }}
             exec:
               command: [ "test", "-e", "/opt/draios/logs/running" ]
+            {{- end }}
             initialDelaySeconds: {{ .Values.daemonset.probes.initialDelay }}
+            periodSeconds: {{ .Values.daemonset.probes.periodDelay }}
           volumeMounts:
           {{- if .Values.localForwarder.enabled }}
             - mountPath: /opt/draios/etc/local_forwarder_config.yaml
