--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -45,6 +45,12 @@ data:
       enforce_leader_election: true
       namespace: {{ include "agent.namespace" . }}
 {{- end }}
+{{- if .Values.localForwarder.enabled }}
+    local_forwarder:
+      enabled: true
+      transmit_message_types:
+        {{- toYaml .Values.localForwarder.transmitMessageTypes | nindent 8 }}
+{{- end }}
 {{- if .Values.prometheus.file }}
   prometheus.yaml: |
 {{ toYaml .Values.prometheus.yaml | indent 4 }}
