--- a/charts/node-analyzer/templates/configmap-image-analyzer.yaml
+++ b/charts/node-analyzer/templates/configmap-image-analyzer.yaml
@@ -8,9 +8,7 @@ metadata:
 {{ include "nodeAnalyzer.labels" . | indent 4 }}
 data:
   collector_endpoint: "https://{{ include "nodeAnalyzer.apiEndpoint" . }}/internal/scanning/scanning-analysis-collector"
-  {{- if hasKey .Values.nodeAnalyzer "sslVerifyCertificate" }}
-  ssl_verify_certificate: "{{ .Values.nodeAnalyzer.sslVerifyCertificate }}"
-  {{- end }}
+  ssl_verify_certificate: {{ include "imageAnalyzer.sslVerifyCertificate" . }}
   debug: "{{ .Values.nodeAnalyzer.debug | default false }}"
   {{- if .Values.nodeAnalyzer.imageAnalyzer.dockerSocketPath }}
   docker_socket_path: {{ .Values.nodeAnalyzer.imageAnalyzer.dockerSocketPath }}
