--- a/charts/node-analyzer/tests/cert_validation_benchmarkrunner_test.yaml
+++ b/charts/node-analyzer/tests/cert_validation_benchmarkrunner_test.yaml
@@ -1,6 +1,6 @@
-suite: Image Analyzer Skip certificate tests
+suite: Benchmark Runner Skip certificate tests
 templates:
-  - templates/configmap-image-analyzer.yaml
+  - templates/configmap-benchmark-runner.yaml
 tests:
   - it: "Global SSL certificate validation enabled (default value)"
     set:
@@ -8,7 +8,7 @@ tests:
       nodeAnalyzer:
         deploy: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -22,7 +22,7 @@ tests:
       nodeAnalyzer:
         deploy: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -36,7 +36,7 @@ tests:
       nodeAnalyzer:
         deploy: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -49,7 +49,7 @@ tests:
         deploy: true
         sslVerifyCertificate: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -62,35 +62,35 @@ tests:
         deploy: true
         sslVerifyCertificate: false
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
           value: "false"
 
-  - it: "SSL certificate validation enabled (sslVerifyCertificate: true explicitly set) [imageAnalyzer container]"
+  - it: "SSL certificate validation enabled (sslVerifyCertificate: true explicitly set) [benchmarkRunner container]"
     set:
       clusterName: "test"
       nodeAnalyzer:
         deploy: true
-        imageAnalyzer:
+        benchmarkRunner:
           sslVerifyCertificate: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
           value: "true"
 
-  - it: "SSL certificate validation disabled [imageAnalyzer container]"
+  - it: "SSL certificate validation disabled [benchmarkRunner container]"
     set:
       clusterName: "test"
       nodeAnalyzer:
         deploy: true
-        imageAnalyzer:
+        benchmarkRunner:
           sslVerifyCertificate: false
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -99,15 +99,15 @@ tests:
   - it: "SSL certificate validation disabled [Global + Node Analyzer POD]"
     set:
       global:
-        sslVerifyCertificate: false
+        sslVerifyCertificate: true
       clusterName: "test"
       nodeAnalyzer:
         deploy: true
         sslVerifyCertificate: false
-        imageAnalyzer:
+        benchmarkRunner:
           deploy: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
@@ -118,18 +118,52 @@ tests:
       clusterName: "test"
       nodeAnalyzer:
         deploy: true
-        sslVerifyCertificate: false
-        imageAnalyzer:
+        sslVerifyCertificate: true
+        benchmarkRunner:
           deploy: true
           sslVerifyCertificate: false
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
           value: "false"
 
+  - it: "SSL certificate validation enabled [Node Analyzer POD + Container]"
+    set:
+      clusterName: "test"
+      nodeAnalyzer:
+        deploy: true
+        sslVerifyCertificate: false
+        benchmarkRunner:
+          deploy: true
+          sslVerifyCertificate: true
+    templates:
+      - templates/configmap-benchmark-runner.yaml
+    asserts:
+      - equal:
+          path: data.ssl_verify_certificate
+          value: "true"
+
   - it: "SSL certificate validation disabled [Global + Node Analyzer POD + Container]"
+    set:
+      global:
+        sslVerifyCertificate: true
+      clusterName: "test"
+      nodeAnalyzer:
+        deploy: true
+        sslVerifyCertificate: true
+        benchmarkRunner:
+          deploy: true
+          sslVerifyCertificate: false
+    templates:
+      - templates/configmap-benchmark-runner.yaml
+    asserts:
+      - equal:
+          path: data.ssl_verify_certificate
+          value: "false"
+
+  - it: "SSL certificate validation enabled [Global + Node Analyzer POD + Container]"
     set:
       global:
         sslVerifyCertificate: false
@@ -137,11 +171,12 @@ tests:
       nodeAnalyzer:
         deploy: true
         sslVerifyCertificate: false
-        imageAnalyzer:
-          sslVerifyCertificate: false
+        benchmarkRunner:
+          deploy: true
+          sslVerifyCertificate: true
     templates:
-      - templates/configmap-image-analyzer.yaml
+      - templates/configmap-benchmark-runner.yaml
     asserts:
       - equal:
           path: data.ssl_verify_certificate
-          value: "false"
+          value: "true"
