Add flag to enable mem profile dumps on a PVC

--- a/charts/registry-scanner/values.yaml
+++ b/charts/registry-scanner/values.yaml
@@ -224,3 +224,6 @@ scanOnStart:
 extraEnvVars: []
 #  - name: FOO
 #    value: bar
+
+# Write memory profile dumps to Persistent Volume Claim (provide PVC name)
+memProfileToPersistentVolumeClaim: ""
