--- a/charts/node-analyzer/Chart.yaml
+++ b/charts/node-analyzer/Chart.yaml
@@ -20,8 +20,7 @@ sources:
 maintainers:
   - name: chen-shmilovich-sysdig
     email: chen.shmilovich@sysdig.com
-  - name: giuse-sysdig
-    email: giuseppe.esposito@sysdig.com
+  - name: sysdiglabs
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
