--- a/charts/sysdig-deploy/values.yaml
+++ b/charts/sysdig-deploy/values.yaml
@@ -60,6 +60,9 @@ agent:
 
 nodeAnalyzer:
   enabled: true
+  nodeAnalyzer:
+    benchmarkRunner:
+      deploy: false
 
 clusterScanner:
   enabled: false
